[package]
name = "tashi-vertex"
version = "0.13.0"
edition = "2024"
description = "Rust bindings for Tashi Vertex, an embedded BFT consensus engine based on Hashgraph."
license = "Apache-2.0"
repository = "https://github.com/tashigg/tashi-vertex-rs"
readme = "README.md"
keywords = ["consensus", "bft", "hashgraph", "tashi-vertex", "vertex"]
categories = ["cryptography", "network-programming"]

[dependencies]
der = { version = "0.7.9", features = ["derive", "std"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.100"
cmake = "0.1.57"
copy_to_output = "2.2.0"

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
